finish context.js and fetch data shown in DevTools

--- a/w09MD/W09.md
+++ b/w09MD/W09.md
@@ -1,1 +1,11 @@
+### w09-P1
+
 ![](擷取.PNG)
+
+### w09-P2 <About_xx /> <Error_xx /> <Navbar_xx />
+
+![](1.PNG)
+
+### w09-P3 finish context.js and fetch data shown in DevTools
+
+![](2.PNG)
