Show Cocktails with your own searchTerm

--- a/w09MD/W09.md
+++ b/w09MD/W09.md
@@ -9,3 +9,7 @@
 ### w09-P3 finish context.js and fetch data shown in DevTools
 
 ![](2.PNG)
+
+### w09-P4 Show Cocktails with your own searchTerm
+
+![](4.PNG)
