--- a/w09MD/W09.md
+++ b/w09MD/W09.md
@@ -13,3 +13,9 @@
 ### w09-P4 Show Cocktails with your own searchTerm
 
 ![](4.PNG)
+
+### w09-P5 Show Cocktails using searchTerm
+![](5.PNG)
+
+### w09-P6 All log message in Github
+
